--- a/src/static/style/style.css
+++ b/src/static/style/style.css
@@ -13,4 +13,7 @@ body form {
 body form > * {
   padding: 0.2em 0.5em;
   margin: 0.2em 0.5em;
+}
+body form .commentsSection {
+  margin: 1.5em 0;
 }/*# sourceMappingURL=style.css.map */
