--- a/src/static/style/style.scss
+++ b/src/static/style/style.scss
@@ -12,5 +12,9 @@ body{
             padding: .2em .5em;
             margin: .2em .5em;
         }
+        .commentsSection{
+            margin:1.5em 0;
+            
+        }
     }
 }
